Change history
--------------

Release Candidate 1
===================

- Removed useless error handling from Brail, now you'll get the noraml ASP.Net Yellow Screen Of Death on errors. More consistent with the rest of the framework.

- Added support for <?brail ?> tags for Brail, so it can be valid XML documnets

- Added logging for Brail, so you can see the Boo code the preprocessor is generating.

- Added more verbose output to compiler errors in Brail.

- Changed the way Brail name the generated class, now the chances for name clashes are much lower. (View: Users.boo and a parameter Users will not cause problems).

- Fixed a bug with Brail not picking up changes that occured by VS.Net

- Fixed bug with NVelocity components that caused an InvalidCastException to be thrown by the Render method if there was something other than an IRailsEngineContext occupying the "context" key.

- MonoRail is now CLSCompliant (kudos to Roelof Blom <roelof.blom@gmail.com>)

- Breaking change: now MonoRail requires that you add the following module to web.config:

	<system.web>
		<httpModules>
			<add name="monorail" type="Castle.MonoRail.Framework.EngineContextModule, Castle.MonoRail.Framework" />
		</httpModules>
	</system.web>

- Configuration nodes and attributes changes:
  - mailto to mailTo 
  - mailfrom to mailFrom
  - customsession to customSession

- SmartViewComponent removed

- DataBinder refactored out. Now implementation lies on Castle.Components.Binder
  Big performance improvement

- ARDataBinder now issues a FindByPK for nested objects if the keys differs (existing object with 
  form fields)

- SmartDispatcher: now there's no hardcode reference to DataBind, ARDataBind or ARFetch attributes. 
  They only must implement the interface IParameterBinding. This opens an interesting extension point
  for users willing to create their own logic to binding form/querystring parameters to their data components
